# flow-of-flows

./: commands.bash  pyproject.toml  requirements.txt
flows/: 01_extract_load.py  02_dbt.py  db_utils.py
